feat: update schema, update crud, refactor structure
